--- a/Listening-email MED/views/index copy.ejs
+++ b/Listening-email MED/views/index copy.ejs
@@ -166,6 +166,19 @@
             </p>
             <p>تاريخ الطلب: <%= orderDate %>
             </p>
+            <% if (orderUpdateDate) { %>
+                <p>تاريخ تحديث الطلب: <%= orderUpdateDate %>
+                </p>
+                <% } %>
+
+                    <p>
+                        <%= salesAgent %> :اسم ممثل المبيعات
+                    </p>
+
+                    <% if (notes) { %>
+                        <p>ملاحظات: <%= notes %>
+                        </p>
+                        <% } %>
         </div>
         <table class="order-table">
             <thead>
